use csv to map to foodon ids

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "url" : "https://github.com/rjawesome"
   },
   "dumper" : {
-      "data_url" : ["https://fdc.nal.usda.gov/fdc-datasets/FoodData_Central_foundation_food_json_2022-04-28.zip"],
+      "data_url" : ["https://fdc.nal.usda.gov/fdc-datasets/FoodData_Central_foundation_food_json_2022-04-28.zip", "https://fdc.nal.usda.gov/fdc-datasets/FoodData_Central_foundation_food_csv_2022-04-28.zip"],
       "uncompress" : true
   },
   "uploader" : {
